--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
 :root {
    --background: #f2f2f2;
    --text: #595959;
+   --grid-size: 16;
 }
 
 body {
@@ -34,7 +35,14 @@ body {
 }
 
 h1 {
+   margin-bottom: 10px;
+   font-size: 4rem;
    font-family: 'Lobster', cursive !important;
+}
+
+.options {
+   margin: 10px;
+   text-align: center;
 }
 
 .draw-box {
@@ -45,12 +53,13 @@ h1 {
 
 .draw-grid {
    display: grid;
-   grid-template-columns: repeat(16, 1fr);
+   width: 480px;
+   height: 480px;
+   border: 1px #ccc solid;
+   grid-template-columns: repeat(var(--grid-size), 1fr);
 }
 
 .square {
-   height: 30px;
-   width: 30px;
    border: 1px #f2f2f2 solid;
 }
 
@@ -59,11 +68,12 @@ h1 {
    background-color: #a5a5a5;
 }
 
-#clear-grid {
+#clear-grid,
+#apply-btn {
    margin: 20px;
    padding: 10px 20px;
    font-family: 'Sintony', sans-serif;
-   font-size: 20px;
+   font-size: 18px;
    border: 1px #ccc solid;
    background-color: transparent;
    color: var(--text)
@@ -88,4 +98,33 @@ footer {
 a {
    color: var(--text);
    text-decoration: none;
+}
+
+.grid-slider {
+   padding-top: 0px;
+   align-items: center;
+}
+.grid-slider p {
+   margin: 10px;
+   text-align: center;
+   font-size: 20px;
+   color: var(--text);
+
+}
+.grid-slider input[type="range"] {
+   -webkit-appearance: none !important;
+   width: 420px;
+   height: 2px;
+   background: var(--text);
+   border: none;
+   outline: none;
+}
+.grid-slider input[type="range"]::-webkit-slider-thumb {
+   -webkit-appearance: none !important;
+   width: 30px;
+   height: 30px;
+   background: var(--text);
+   border: 2px solid var(--text);
+   border-radius: 50%;
+   cursor: pointer;
 }
