--- a/style.css
+++ b/style.css
@@ -129,3 +129,19 @@ a {
    border-radius: 50%;
    cursor: pointer;
 }
+
+@media only screen and (max-width: 400px) {
+   h1 {
+      font-size: 2.5rem;
+   }
+
+   .draw-grid {
+      width: 350px;
+      height: 350px;
+   }
+
+   .grid-slider input[type="range"] {
+      -webkit-appearance: none !important;
+      width: 350px;
+   }
+}
